--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,8 @@
 .nav-div {
   display: table;
   margin: 0;
+  width: 100%;
+  text-align:center;
 }
 .nav-ul {
   list-style-type: none;
@@ -60,4 +62,18 @@
 }
 .nav-li a:hover {
   color: grey;
+}
+
+.btn-cont{
+  width: 100%
+}
+
+.login-cont{
+  width: 50%;
+  text-align: end;
+}
+
+.reset-cont{
+  width: 50%;
+  text-align: start;
 }
